--- a/nestjs-back/package.json
+++ b/nestjs-back/package.json
@@ -24,10 +24,14 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
