--- a/nestjs-front/package.json
+++ b/nestjs-front/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
     "ngx-mask": "^8.1.2",
+    "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
     "sweetalert2": "^8.18.5",
