--- a/nestjs-front/angular.json
+++ b/nestjs-front/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css" 
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/flexboxgrid/css/flexboxgrid.min.css"
             ],
             "scripts": []
           },
