--- a/nestjs-front/package.json
+++ b/nestjs-front/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
+    "flexboxgrid": "^6.3.1",
     "ngx-mask": "^8.1.2",
     "ngx-pagination": "^4.1.0",
     "ngx-toastr": "^11.1.2",
